Add: main-page controller & route
