# src/routes/api.php
@@ -13,17 +13,14 @@ use App\Http\Controllers\Api\ServiceCategoryController;
 use App\Http\Controllers\Api\ServiceController;
 use App\Http\Controllers\Api\NewsController;
 use App\Http\Controllers\Api\RentRequestController;
+use App\Http\Controllers\Api\HomePageController;
 
 
 Route::prefix('v1')->middleware('api')->group(function () {
 
-//    Route::prefix('home')->group(function () {
-//        Route::get('/', function () {
-//            return ApiResponse::success('Запрос принят))');
-//        });
-//
-//
-//    });
+    Route::prefix('home')->group(function () {
+        Route::get('/', [HomePageController::class, 'index']);
+    });
 
     Route::prefix('shop')->group(function () {
         Route::get('/categories', [ShopCategoryController::class, 'index'])->name('api-shop-category-list');
